# crucible

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTIONS.md  GOAL.md  README.md  TASK_3_HF_DATASET_CORPUS.md  answer_verifier.py  crucible  failure_repair_note.md  ingress_normalize.py  main.py  pyproject.toml  vercel.json
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
demo_surface/: README.md  __init__.py  api.py  main.py
demo_surface/data/: demo_run.json
demo_surface/web/: package-lock.json  package.json
examples/: README.md
examples/a_data_prep_crucible/: README.md
examples/numbers/: README.md  (+1 more)
harness/: AGENTS.md  README.md  __init__.py  codex_runtime.py  contracts.py  hf_dataset.py  load.py  main.py  next_action.py  observations.py  operators.py  packs.py  promote.py  pyproject.toml  recipes.py  runner.py  scaffold.py
harness/examples/: benchmark-pack.lock.json  requested-tasks-pack.lock.json
harness/examples/basic-python/: task.md  teacher.patch  verifier.yaml
harness/examples/basic-python/repo/: check.py
harness/examples/failure-repair-curation/: attempt.patch  task.md
harness/examples/failure-repair-curation/repo/: check.py  failing_attempt.patch  failing_verifier.txt  main.py
harness/examples/ingress-normalize/: attempt.patch  task.md
harness/examples/ingress-normalize/repo/: check.py  ingress_normalize.py
harness/examples/reward-boundary/: task.md  teacher.patch
harness/examples/reward-boundary/repo/: answer_verifier.py  check.py
knowledge/: index.md
site/: astro.config.mjs  package-lock.json  package.json
(+18 files in other folders)
