[project]
name = "crucible-harness"
version = "0.1.0"
description = "Filesystem-first Crucible harness for verifier-backed SFT/RLVR rows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
codex = [
    "openai-codex>=0.1.0b2",
]
